tests/baselines/reference/intersectionTypeInference.errors.txt
tests/cases/conformance/types/intersection/intersectionTypeInference.ts(6,5): error TS2322: Type 'T' is not assignable to type 'T & U'.
  Type 'T' is not assignable to type 'U'.
tests/cases/conformance/types/intersection/intersectionTypeInference.ts(7,5): error TS2322: Type 'U' is not assignable to type 'T & U'.
  Type 'U' is not assignable to type 'T'.


==== tests/cases/conformance/types/intersection/intersectionTypeInference.ts (2 errors) ====
    
    function extend<T, U>(obj1: T, obj2: U): T & U {
        var result: T & U;
        obj1 = result;
        obj2 = result;
        result = obj1;  // Error
        ~~~~~~
!!! error TS2322: Type 'T' is not assignable to type 'T & U'.
!!! error TS2322:   Type 'T' is not assignable to type 'U'.
        result = obj2;  // Error
        ~~~~~~
!!! error TS2322: Type 'U' is not assignable to type 'T & U'.
!!! error TS2322:   Type 'U' is not assignable to type 'T'.
        return result;
    }
    
    var x = extend({ a: "hello" }, { b: 42 });
    var s = x.a;
    var n = x.b;
    